# easyacademy-back

./: .env  .gitignore  README.md  pyproject.toml
core/: db.sqlite3  settings.py  urls.py
core/core/: settings.py  urls.py
core/ults/: models.py  serializers.py  views.py
entities/: models.py  serializers.py  views.py
entities/migrations/: 0001_initial.py  0002_student_create_date.py  0003_student_foto_perfil.py  0004_egress.py  0005_rename_create_date_student_timestemp.py  0006_remove_student_timestemp_delete_egress.py  0007_student_create_date.py  0008_teacher_alter_student_user.py  0009_student_registration.py
tests/: test_easy_academy.py
ults/: apps.py  models.py  serializers.py  urls.py  views.py
ults/migrations/: 0001_initial.py  0002_alter_classhours_time_class.py  0002_course_alter_classhours_time_class.py  0003_merge_20220930_1949.py  0004_delete_course.py  0005_course.py  0006_course_coordenador.py  0006_subject_teacher.py  0007_merge_0006_course_coordenador_0006_subject_teacher.py
